# async-python-sprint-5

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 2f733c9fad03_tbl_file_rm_idx.py  576f05a26298_tbl_file_add_uc.py  58a4afc00313_initial_db.py  9f207ac97c22_tbl_file_constraint.py  a2e9880c6df9_tbl_file_rm_idx.py
nginx/: nginx.conf
nginx/conf.d/: site.conf
src/: main.py
src/api/v1/: base.py  file.py  ping.py  user.py
src/core/: auth.py  config.py  utils.py
src/db/: db.py  redis.py
src/models/: __init__.py  file.py  user.py
src/schemas/: file.py  user.py
src/services/: file.py  minio.py  ping.py
tests/: conftest.py  test_auth_api.py  test_file_api.py  test_set_file_path_and_name.py
tests/file_api/: test_file_api.py  test_get_files.py  test_search_files.py
